--- a/app.css
+++ b/app.css
@@ -98,6 +98,9 @@ body {
     background-color: #ddd;
     transition: transform 500ms;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .card_signal{
@@ -120,6 +123,8 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
+    /* for firefox bug */
+    transform: rotateX(0deg);
 }
 
 .card_back{
